# Dl

./: .gitignore  EXPERIMENTS.md  IMAGE_CAPTIONING_PROJECT.md  PRESENTATION.md  pyproject.toml  requirements-dev.txt  requirements.txt
presentation/: image_captioning_presentation.pptx
projects/image_captioning/: __init__.py  data.py  eda.py  evaluation.py  experiments.py  features.py  flickr8k_eda_step_by_step.ipynb  flickr8k_modeling_step_by_step.ipynb  inference.py  model.py  pretrained_captioning.py  retrieval.py  text_baselines.py  training.py  transforms.py  vocab.py
scripts/: build_presentation.py  build_qualitative_report.py  diagnose_captioning_setup.py  evaluate_caption_checkpoint.py  resume_caption_training.py  run_architecture_experiments.py  run_flickr8k_eda.py  run_tfidf_caption_experiment.py
streamlit_app/: app.py
tests/: test_diagnose_captioning_setup.py  test_image_captioning_data.py  test_image_captioning_evaluation.py  test_image_captioning_experiments.py  test_image_captioning_inference.py  test_image_captioning_model.py  test_image_captioning_retrieval.py  test_image_captioning_text_baselines.py  test_image_captioning_training.py  test_image_captioning_transforms.py  test_image_captioning_vocab.py  test_presentation_builder.py  test_pretrained_captioning.py
