[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "flickr8k-image-captioning"
version = "0.1.0"
description = "VGG16 and LSTM image-captioning project for Flickr8k"
readme = "IMAGE_CAPTIONING_PROJECT.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "matplotlib>=3.8,<4",
    "pandas>=2.1,<4",
    "Pillow>=10,<13",
    "streamlit>=1.31,<2",
    "torch>=2.2,<3",
    "torchvision>=0.17,<1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7,<8",
    "pytest>=8,<10",
]

[tool.setuptools.packages.find]
include = ["projects*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
